snapshots/syntax/expressions/empty_literal.snap
---
source: src/syntax/expressions/mod.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: x
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: LiteralExpression
          children:
            - kind: EmptyKeyword
              text: Empty
        - kind: Newline
          text: "\n"
